# afagh_emdad

./: Readme.md
app/web/: .pylintrc  pyproject.toml  scripts.py
app/web/afagh_emdad/: __init__.py  settings.py
app/web/web/achievements/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/blog_posts/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/cars/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/certificates/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/cities/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/complaints/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/config/: __init__.py  celery.py  schema.py  schema_loader.py  settings.py  tasks.py  urls.py
app/web/web/faqs/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/live_location/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/media/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/notifications/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/orders/: models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/otp/: apps.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/payments/: models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  types.py  urls.py  validations.py  views.py
app/web/web/profiles/: models.py  mutations.py  schema.py  (+8 more)
app/www/: pyproject.toml
app/www/afagh_emdad/: __init__.py  celery.py  settings.py
(+172 files in other folders)
