[tool.poetry]
name = "www"
version = "0.1.0"
description = ""
authors = ["Abdollah Mohebbi <Abdollah.promail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
mysqlclient = "^2.2.4"
celery = "^5.4.0"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
